--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "homepage": "https://github.com/JohnPaulConcierge/zf-jpc-saml",
     "minimum-stability": "stable",
     "prefer-stable": true,
-    "require-dev": {
+    "require": {
         "php": ">=5.4",
         "ext-SPL": "*",
         "ext-zlib": "*",
